# XAI4TSC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pypi.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  tests.yml
cache/datasets/synthetic/freq_shapes/: test_data.npy  test_labels.json  test_metadata.json  train_labels.json  train_metadata.json  val_data.npy  val_labels.json  val_metadata.json
docs/: requirements.txt
docs/source/: conf.py  contributing.md  disclaimer.md  framework.rst  index.rst  package.rst
examples/: getting_started.py
experiment_runner/: __init__.py  cache.py  config.py  download_datasets.py  evaluate.py  explain.py  log_setup.py  main.py
experiment_runner/configs/: example.yaml  example_frequency.yaml  master.yaml  ucr_benchmark.yaml  uea_benchmark.yaml
scripts/: generate_requirements.py
src/xai4tsc/: __init__.py  logging_config.py
src/xai4tsc/data/: __init__.py  base.py  data_loaders.py  datasets.py
src/xai4tsc/evaluation/: __init__.py  base.py  evaluate.py  frequency_evaluate.py  timefrequency_auc.py  timefrequency_perturbation.py
src/xai4tsc/models/: __init__.py  base.py  models.py
src/xai4tsc/utils/: __init__.py  animation.py  defaults.py  fourier_transforms.py  perturbation.py  plot.py  utils.py
src/xai4tsc/xai/: __init__.py  _types.py  base.py  explain.py  explanation_domains.py  feature_attribution.py  freqrise.py  random_baseline.py  wrappers.py
tests/: conftest.py
tests/fixtures/: test_config.yaml
tests/integration/: test_package.py  test_runner.py  test_tshap_integration.py
tests/unit/: test_animation.py  test_cache.py  test_config.py  test_data.py  test_download_datasets.py  test_evaluation.py  test_explain_runner.py  test_fourier_transforms.py  test_freq_explainers.py  test_freq_metrics.py  test_logging_config.py  test_main.py  test_models_io.py  test_plot.py  test_plot_freq.py  test_tshap.py  test_utils.py  test_xai_explain.py  test_xai_wrappers.py
